assets/css/style.css
/* Importing google fonts*/
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

/* Asterisk wildcard selector to override default styles added by the browser*/
* {
    padding: 0;
    margin: 0;
    /* Border-box: applies the set heigh and width to the entire element including the element border*/
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    /* For elements to show underneath each other*/
    flex-direction: column;
    /* Generic project styles */
    color: white;
    font-family: 'Roboto', sans-serif;
}

/* Header */
header {
    background: url('../images/padel-court-header.webp') no-repeat center 25% / cover;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    height: 120px;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

/* Remove the underlying styling and blue color of links in the header */
header a {
    text-decoration: none;
    color: inherit;

}

h1 {
    font-family: 'Oswald', sans-serif;
    font-size: 135%;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: rgb(250, 250, 243);
}

/* Navigation menu */
#menu {
    list-style-type: none;

}

/* Add more space between the lines in the navigation menu*/
#menu>li {
    margin-bottom: 0.5rem;
    margin-top: 0.5rem;

}

/*Give a visual cue to the active page*/
.active-page {
    border-bottom: 2px solid white;

}

/* Navbar styles with dropdown toggle */
nav {
    position: absolute;
    background-color: rgba(1, 1, 21, .2);
    width: 100%;
    left: 0;
    padding-left: 1rem;
    /* Navbar is hidden untill it's clicked to open*/
    display: none;
    /* Top of nav menu should start at bottom of the parent(header element)*/
    top: 25%;
}

/* Nav-toggle function*/
#nav-toggle:checked~nav {
    display: block;

}

/*Hides the checkbox in the nav*/
#nav-toggle {
    display: none;

}

.nav-toggle-label {
    font-size: 2rem;
}

/* Main content */
main {
    background-color: white;
    color: black;
    /* For main element to take all surplus space and push the footer element down*/
    flex: 1 0 auto;
    /* Push the main down from underneath the nav with fixed position*/
    margin-top: 120px;
}

/* Adding section one to the main on the first page */
#section-one {
    text-align: center;
}

#section-one div, #section-two div, #section-three div {
    padding: 2rem 2rem;
}

#main-div > div  {
    padding: 0;
    margin: 0;
}

#section-one p {
    padding: 1rem 1rem 1rem 1rem;
}

/* Adding section two to main on the first page */
.background-color {
    background-color: aliceblue;
}

#section-two h2, #section-three h2 {
    text-align: center;
    padding: 0 1.5rem 1rem 1.5rem;

}

#section-two p {
    padding: 0 1rem 1rem 1rem;
}

#section-two a {
    text-decoration: none;
    color: rgb(18, 128, 223);

}

#section-two input {
    margin: 1rem 28% 1rem 28%;
    font-size: 18px;
    font-weight: bold;
    border: 2px solid rgb(18, 128, 223);
    border-radius: 3px;
    padding: 0.5rem;
    background-color: white;

}

#section-three li {
    list-style-type: none;
    margin-bottom: 0.5rem;
}

#vamos {
    margin-top: 1rem;
    text-align: center;
    font-weight: bold;
    font-size: 18px;
}

/* Footer */
footer {
    background-color: rgb(18, 128, 223);
}

#contact-ways {
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#contact-ways i {
    font-size: 150%;
    padding: 5%;
    color: white;
}

/* Media query: tablets and larger (768px and up)*/
@media screen and (min-width: 768px) {

    /* Header */
    header {
        height: 150px;
    }

    nav {
        display: block;
        width: 100%;
        padding-right: 0.5rem;
        top: 150px;
        left: 0;
        background-color: rgb(44, 36, 155);
        /* Add shadow underneath the navbar */
        box-shadow: 0 3px 5px rgb(18, 128, 223);

    }

    /* Make the nav menu items show side by side */
    #menu {
        display: flex;
        /* Show the nav links at the right side of the nav bar*/
        justify-content: flex-end;
        height: 36px;
    }

    /* Add space between the menu items horisontaly */
    #menu>li {
        padding-right: 1.5rem;
        font-size: 130%;
        /* Centering the nav links in the nav bar vertically */
        margin-bottom: 4.3px;
        margin-top: 4.3px;
    }

    /* Hide the checkbox label from the nav */
    .nav-toggle-label {
        display: none;
    }

    /*Increase the logo size*/
    #logo {
        font-size: 300%;
        line-height: 75px;
        margin: 0 0.5rem;
    }

    /* Main */
    main {
        /*Push the main content down after enlarging the logo*/
        margin-top: 186px;
    }
    /* Increase h2 font-size */
    #section-one h2, #section-three h2 {
        font-size: 2.5em;
        padding: 1rem 2.5rem 2rem 2.5rem;

    }
    #section-two h2 {
        font-size: 2.5em;
        padding: 2.5rem 2.5rem 2rem 2.5rem;

    }

    p, #section-three li, #vamos {
        font-size: 1.5em;
    }

    #section-three li {
        margin-bottom: 1rem;
    }

    #vamos {
        margin-top: 2rem;
        margin-bottom: 1.5rem;
    }

    .inline-block {
        display: inline-block;
        width: 32%;
        vertical-align: top;
    }
    .inline-block p {
        padding: 0;
        margin: 0;
    }
    #section-two div {
        padding: 0;
        margin: 0;
    }

    #section-two input {
        padding: 1rem;
        font-size: 1.5em;
        margin: 2rem 37.75% 3rem 37.75%;
    
    }

    #section-three {
        text-align: center;
    }

    }

/* Media query: tablets and larger (992px and up)*/
@media screen and (min-width: 992px) {

    /* Add hover effect to the nav links*/
    #menu a:hover {
        color: rgb(230, 191, 49);
        border-bottom: 2px solid rgb(230, 191, 49);

    }

    /* Add hover effect to the logo*/
    #logo:hover {
        color: rgb(230, 191, 49);
    }

    #contact-ways i:hover {
        color: rgb(230, 191, 49);
    }
}

